JG-2002-01-24-1: Testsuite: New test "large_cluster" testing performance and
                            scalability of a Grid Engine cluster.
                            Simulating a large cluster using the simulation
                            mechanisms provided by JG-2002-01-18-0. 
                            Tests performance dependent on 
                            - number of hosts and number of jobs
                            - number of hosts and size of a sharetree (GEEE)

JG-2002-01-24-0: Testsuite: New functions in sge_procedures:
                            - add_exechost: add an exec host object
                            - add_user    : add a user (GEEE)
                            - del_user    : delete a user (GEEE)

SD-2002-01-23-3: Bugfix:   Fixed setting of shared override tickets in
                           SGEEE_CLASSIC_SCHEDULING mode.

EB-2002-01-23-1: Enhancem.: max_u_jobs parameter to limit the maximum number
                            of jobs for a user.

EB-2002-01-23-0: Bugfix:    qsub -e/o <path longer than MAX_STRING_SIZE>
                            caused crash of qmaster

SD-2002-01-23-2: Bugfix:   Initialize rusage structure to zeroes

AS-2002-01-23-1: Enhancem. set execd priority not higher than PTF_MAX_PRIORITY

AA-2002-01-23-1: Feature:  Security:
                           - fallback key/cert paths
                           - removed gsd.refresh_time debug message

CR-2002-01-23-1: Testsuite: - new procedure: close_open_rlogin_sessions()
                 Enhancem.: - closing all rlogin sessions on TCL error
                            - send CTRL + C on each close_spawn_process() call
                              to stop evtl. running applications at remote host          
CR-2002-01-23-0: Testsuite: - updated resolve_version for SGE(EE) 5.3beta2
                            - bugfix for SGE installation (install_core_system)

AA-2002-01-23-0: Feature:  Security:
                           - change of cert/key paths