@@ -282,6 +282,7 @@ set   DEBUGGED    = 0
 set   NOERR_CFLAG = ""
 set   GCC_NOERR_CFLAGS = ""
 set   GCC_NOERR_CXXFLAGS = ""
+set   GCC_NO_STRICT_PROTO = ""
 set   MEMCFLAG=""
 set   COMPILE_ARCH = ""
 set   INTERACTTARGETS = "qmake qtcsh"
@@ -794,6 +795,7 @@ case ALINUX:
    set NOERR_CFLAG = "-Wno-error"
    set GCC_NOERR_CFLAGS = "$CFLAGS -Wno-error"
    set GCC_NOERR_CXXFLAGS = "$CXXFLAGS -Wno-error"
+   set GCC_NO_STRICT_PROTO = "-Wno-strict-prototypes"
    breaksw
 
 case ALPHA4:
@@ -1631,6 +1633,7 @@ if ( "$CORE" == 1 ) then
        "XLIBS=$XLIBS" "LFLAGS=$LFLAGS $KLFLAGS" "STRIP=$STRIP" \
        "RANLIB=$RANLIB" "AR=$AR" "ARFLAGS=$ARFLAGS" \
        "SGE_NPROCS_CFLAGS=$SGE_NPROCS_CFLAGS" "GCC_NOERR_CFLAGS=$GCC_NOERR_CFLAGS" \
+       "GCC_NO_STRICT_PROTO=$GCC_NO_STRICT_PROTO" \
        "COMPILE_DC=$COMPILE_DC" "LOADAVGLIBS=$LOADAVGLIBS" "ZLIB=$ZLIB" "TPLIB=$TPLIB" \
        "XGETTEXT=$XGETTEXT" "MESSAGES=$MESSAGES" "COMPILE_ARCH=$COMPILE_ARCH" \
        "INTERACTTARGETS=$INTERACTTARGETS" \
